; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_decay_epoch_advance.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_decay_epoch_advance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.TYPE_6__*, i32*, i32*, i32)* @arena_decay_epoch_advance to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arena_decay_epoch_advance(i32* %0, i32* %1, %struct.TYPE_6__* %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %15 = load i32*, i32** %10, align 8
  %16 = call i64 @eset_npages_get(i32* %15)
  store i64 %16, i64* %13, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = load i64, i64* %13, align 8
  %20 = call i32 @arena_decay_epoch_advance_helper(%struct.TYPE_6__* %17, i32* %18, i64 %19)
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %22 = call i64 @arena_decay_backlog_npages_limit(%struct.TYPE_6__* %21)
  store i64 %22, i64* %14, align 8
  %23 = load i64, i64* %14, align 8
  %24 = load i64, i64* %13, align 8
  %25 = icmp ugt i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %6
  %27 = load i64, i64* %14, align 8
  br label %30

28:                                               ; preds = %6
  %29 = load i64, i64* %13, align 8
  br label %30

30:                                               ; preds = %28, %26
  %31 = phi i64 [ %27, %26 ], [ %29, %28 ]
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  store i64 %31, i64* %33, align 8
  %34 = call i32 (...) @background_thread_enabled()
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %30
  %37 = load i32, i32* %12, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %48

39:                                               ; preds = %36, %30
  %40 = load i32*, i32** %7, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %43 = load i32*, i32** %10, align 8
  %44 = load i64, i64* %13, align 8
  %45 = load i64, i64* %14, align 8
  %46 = load i32, i32* %12, align 4
  %47 = call i32 @arena_decay_try_purge(i32* %40, i32* %41, %struct.TYPE_6__* %42, i32* %43, i64 %44, i64 %45, i32 %46)
  br label %48

48:                                               ; preds = %39, %36
  ret void
}

declare dso_local i64 @eset_npages_get(i32*) #1

declare dso_local i32 @arena_decay_epoch_advance_helper(%struct.TYPE_6__*, i32*, i64) #1

declare dso_local i64 @arena_decay_backlog_npages_limit(%struct.TYPE_6__*) #1

declare dso_local i32 @background_thread_enabled(...) #1

declare dso_local i32 @arena_decay_try_purge(i32*, i32*, %struct.TYPE_6__*, i32*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
